--- a/web/scss/components/_btn.scss
+++ b/web/scss/components/_btn.scss
@@ -1,6 +1,6 @@
 .btn {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	background: $blue;
 	color: $white;
 	font-size: 13px;
