Update / upgrade select styles and scripts (#71)
* update / upgrade select styles and script

* update select styles again

--- a/src/View/page/index.html
+++ b/src/View/page/index.html
@@ -15,49 +15,45 @@
             <label for="" class="label">Your email address</label>
             <input type="text" value="johndoe@gmail.com" class="input__text">
         </div>
-        <div class="field field--valid">
-            <label for="" class="label">Your email address</label>
-            <input type="text" value="johndoe@gmail.com" class="input__text">
-        </div>
-        <div class="field field--error">
-            <label for="" class="label">Your email address</label>
-            <input type="text" value="johndoe@gmail.com" class="input__text">
-        </div>
         <div class="field field--disable">
             <label for="" class="label">Your email address</label>
             <input type="text" value="johndoe@gmail.com" class="input__text">
         </div>
-    </div>
-    <button class="btn">Connexion</button>
-    <div class="center">
-        <div class="custom-select-wrapper">
-            <select name="sources" id="sources" class="custom-select sources" placeholder="SELECTOR" style="display: none;">
-                <option value="profile">Profile</option>
-                <option value="profile">Profile</option>
-                <option value="word">Word</option>
-                <option value="hashtag">Hashtag</option>
-                <option value="profile">Profile</option>
-                <option value="word">Word</option>
-                <option value="hashtag">Hashtag</option>
-                <option value="word">Word</option>
-                <option value="hashtag">Hashtag</option>
-            </select>
-            <div class="custom-select sources">
-                <span class="custom-select-trigger">SELECTOR</span>
-                <div class="custom-options">
-                    <span class="custom-option" data-value="profile">Profile</span>
-                    <span class="custom-option" data-value="profile">Profile</span>
-                    <span class="custom-option" data-value="word">Word</span>
-                    <span class="custom-option" data-value="hashtag">Hashtag</span>
-                    <span class="custom-option" data-value="profile">Profile</span>
-                    <span class="custom-option" data-value="word">Word</span>
-                    <span class="custom-option" data-value="hashtag">Hashtag</span>
-                    <span class="custom-option" data-value="word">Word</span>
-                    <span class="custom-option" data-value="hashtag">Hashtag</span>
+        <div class="field">
+            <label for="" class="label">Pays</label>
+            <div class="custom-select-wrapper">
+                <select name="sources" id="sources" class="custom-select sources" placeholder="SELECTOR" style="display: none;">
+                    <option value="profile">Profile</option>
+                    <option value="profile">Profile</option>
+                    <option value="word">Word</option>
+                    <option value="hashtag">Hashtag</option>
+                    <option value="profile">Profile</option>
+                    <option value="word">Word</option>
+                    <option value="hashtag">Hashtag</option>
+                    <option value="word">Word</option>
+                    <option value="hashtag">Hashtag</option>
+                </select>
+                <div class="custom-select sources">
+                    <span class="custom-select-trigger">
+                        <span>Select value</span>
+                        <i class="icon-select"></i>
+                    </span>
+                    <div class="custom-options">
+                        <span class="custom-option" data-value="profile">Profile</span>
+                        <span class="custom-option" data-value="profile">Profile</span>
+                        <span class="custom-option" data-value="word">Word</span>
+                        <span class="custom-option" data-value="hashtag">Hashtag</span>
+                        <span class="custom-option" data-value="profile">Profile</span>
+                        <span class="custom-option" data-value="word">Word</span>
+                        <span class="custom-option" data-value="hashtag">Hashtag</span>
+                        <span class="custom-option" data-value="word">Word</span>
+                        <span class="custom-option" data-value="hashtag">Hashtag</span>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <button class="btn">Connexion</button>
 </body>
 
 <script src="../../../web/js/select.js"></script>
