--- a/web/scss/components/_select.scss
+++ b/web/scss/components/_select.scss
@@ -4,7 +4,6 @@
   position: relative;
   display: inline-block;
   user-select: none;
-  margin: 10px;
 }
 
 .custom-select-wrapper select {
@@ -15,46 +14,26 @@
   position: relative;
   display: inline-block;
   min-width: 150px;
-  width: 200px;
-  max-width: 300px;
+  width: 100%;
   height: 50px;
 }
 
 .custom-select-trigger {
   position: relative;
-  display: block;
-  min-width: 150px;
-  padding: 0 1.5rem 0 22px;
-  font-size: 16px;
-  font-weight: 300;
-  color: #000;
-  line-height: 50px;
-  background: #FFF;
-  border-radius: 4px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 1rem 1.5rem;
+  font-size: .85rem;
+  background: $white;
+  border-radius: $radiusSmall;
   cursor: pointer;
-  height: 50px;
-  border: 1px solid #E3E9F3
-}
+  border: 1px solid $dividerLight;
 
-.custom-select-trigger:after {
-  position: absolute;
-  display: block;
-  content: '';
-  width: 10px;
-  height: 10px;
-  top: 50%;
-  right: 25px;
-  margin-top: -3px;
-  border-bottom: 1px solid #000;
-  border-right: 1px solid #000;
-  transform: rotate(45deg) translateY(-50%);
-  transition: all .2s ease-in-out;
-  transform-origin: 50% 0;
-}
-
-.custom-select.opened .custom-select-trigger:after {
-  margin-top: 3px;
-  transform: rotate(-135deg) translateY(-50%);
+  span {
+    font-size: inherit;
+  }
 }
 
 .custom-options {
@@ -63,19 +42,17 @@
   top: 100%;
   left: 0;
   right: 0;
-  min-width: 100%;
+  width: 100%;
   margin: 15px 0;
-  border: 1px solid #E3E9F3;
-  border-radius: 4px;
+  border: 1px solid $dividerLight;
+  border-radius: $radiusSmall;
   box-sizing: border-box;
-  box-shadow: 0 2px 1px rgba(0, 0, 0, .07);
-  background: #fff;
-  transition: all .4s ease-in-out;
-  margin-top: 30px;
+  background: $white;
+  transition: .15s $cubic01;
+  margin-top: 18px;
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  transform: translateY(-15px);
   max-height: 200px;
   overflow: auto;
 }
@@ -86,7 +63,7 @@
   pointer-events: all;
   max-height: 200px;
   overflow: auto;
-  box-shadow: 0px 0px 11px 1px rgba(226, 231, 240, 1);
+  box-shadow: $boxShadow02;
 }
 
 .option-hover:before {
@@ -97,13 +74,9 @@
   position: relative;
   display: block;
   padding: 0 22px;
-  margin: 8px;
-  font-size: 15px;
-  color: #000;
-  line-height: 47px;
-  font-weight: 300;
+  line-height: 40px;
+  transition: .1s $cubic01;
   cursor: pointer;
-  transition: all .1s ease-in-out;
 }
 
 .custom-option:first-of-type {
