--- a/src/View/page/client-card.html
+++ b/src/View/page/client-card.html
@@ -11,38 +11,40 @@
 </head>
 
 <body class="client-card">
-  <header class="header">
-    <div class="header__inner">
-      <div class="header__lside">
-        <a href="" class="header__logo">
-          <img src="https://res.cloudinary.com/dj09xr9gd/image/upload/v1528893547/logo_1.svg">
-          <span>JOEY</span>
-        </a>
+    <header class="header">
+      <div class="header__inner">
+          <div class="header__lside">
+              <a href="" class="header__logo">
+                  <img src="https://res.cloudinary.com/dj09xr9gd/image/upload/v1528893547/logo_1.svg">
+                  <span>JOEY</span>
+              </a>
 
-        <nav class="header__nav">
-          <ul class="header__nav-inner">
-            <li class="header__nav-el">
-              <a href="">Client list</a>
-            </li>
-            <li class="header__nav-el">
-              <a href="">Sales list</a>
-            </li>
-            <li class="header__nav-el">
-              <a href="">Manage my account</a>
-            </li>
-          </ul>
-        </nav>
+              <nav class="header__nav">
+                  <ul class="header__nav-inner">
+                      <li class="header__nav-el current">
+                          <a href="">Client list</a>
+                      </li>
+                      <li class="header__nav-el">
+                          <a href="">Sales list</a>
+                      </li>
+                      <li class="header__nav-el">
+                          <a href="">Manage my account</a>
+                      </li>
+                  </ul>
+              </nav>
 
+          </div>
+          <div class="header__rside">
+              <button class="btn btn__client">
+                  <i class="icon-add-user"></i>Add a client</button>
+              <div class="user">
+                  <p class="user__name">Mr. John Doe <i class="icon-arrow-bottom"></i></p>
+                  <div class="user__log-out">
+                      <a href="#" class="user__log-out__link"><i class="icon-log-out"></i>Log out</a>    
+                  </div>
+              </div>
+          </div>
       </div>
-      <div class="header__rside">
-        <button class="btn btn__client">
-          <i class="icon-add-user"></i>Add a client</button>
-        <div class="user">
-          <p class="user__name">Mr. John Doe</p>
-          <div class="user__img"></div>
-        </div>
-      </div>
-    </div>
   </header>
 
   <div class="layout">
