--- a/src/View/page/client-list.html
+++ b/src/View/page/client-list.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,800" rel="stylesheet">
 </head>
 
-<body class="client-list">
+<body class="dashboard">
   <header class="header">
     <div class="header__inner">
       <div class="header__lside">
