--- a/src/View/page/client-list.html
+++ b/src/View/page/client-list.html
@@ -150,30 +150,32 @@
       <div class="create-client__modal-step step">
         <div class="field">
           <label for="" class="label">Civility</label>
-          <div class="input__text-icon">
-            <span class="input__icon">
-              <i class="icon-mail"></i>
-            </span>
-            <input type="text" class="input__text" placeholder="johnidoe@oply.com">
-          </div>
+            <div class="custom-select-wrapper">
+                <select name="sources" id="sources" class="custom-select sources" placeholder="SELECTOR" style="display: none;">
+                    <option value="profile">Mr.</option>
+                    <option value="profile">Mrs.</option>
+                    <option value="word">Miss</option>
+                </select>
+                <div class="custom-select sources">
+                    <span class="custom-select-trigger">
+                        <span>Civility</span>
+                        <i class="icon-select"></i>
+                    </span>
+                    <div class="custom-options">
+                        <span class="custom-option" data-value="profile">Mr.</span>
+                        <span class="custom-option" data-value="profile">Mrs.</span>
+                        <span class="custom-option" data-value="word">Miss</span>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="field">
           <label for="" class="label">First name</label>
-          <div class="input__text-icon">
-            <span class="input__icon">
-              <i class="icon-mail"></i>
-            </span>
-            <input type="text" class="input__text" placeholder="johnidoe@oply.com">
-          </div>
+          <input type="text" class="input__text" placeholder="Exemple: John">
         </div>
         <div class="field">
           <label for="" class="label">Last name</label>
-          <div class="input__text-icon">
-            <span class="input__icon">
-              <i class="icon-mail"></i>
-            </span>
-            <input type="text" class="input__text" placeholder="johnidoe@oply.com">
-          </div>
+          <input type="text" class="input__text" placeholder="Exemple: Doe">
         </div>
         <div class="field">
           <label for="" class="label">Email</label>
@@ -188,9 +190,9 @@
           <label for="" class="label">Phone</label>
           <div class="input__text-icon">
             <span class="input__icon">
-              <i class="icon-mail"></i>
+              <i class="icon-phone"></i>
             </span>
-            <input type="text" class="input__text" placeholder="johnidoe@oply.com">
+            <input type="text" class="input__text" placeholder="+331 01 02 03 04">
           </div>
         </div>
       </div>
