--- a/src/View/page/sign-up.html
+++ b/src/View/page/sign-up.html
@@ -48,7 +48,7 @@
                         <div class="btn__outer">
                             <button class="btn btn__center">Sign up now</button>
                         </div>
-                        <p class="btn__bottom-msg">Already have an account? <a href="">Sign in here</a></a></p>
+                        <p class="btn__bottom-msg">Already have an account? <a href="">Sign in here</a></p>
                     </div>
                 </form>
             </div>
