--- a/src/View/index.html.twig
+++ b/src/View/index.html.twig
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,800" rel="stylesheet">
 </head>
-<body>
+{% if classBody is not null %}
+<body class="{{ classBody }}">
+    {% else %}
+    <body>
+{% endif %}
 {% block body %}
-    <div>
-        <p>jfghjkljhgfdgshcfjvbknl</p>
-    </div>
 
 {% endblock %}
 
