--- a/src/View/sales/sign-up.html.twig
+++ b/src/View/sales/sign-up.html.twig
@@ -1,47 +1,46 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Joey - Connexion</title>
-    <link rel="stylesheet" type="text/css" href="../../../web/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,800" rel="stylesheet">
-</head>
-<body class="sign-up">
+{% extends "./index.html.twig" %}
+{% block title %}Joey - Sign up{% endblock %}
+{% set classBody = 'sign-up' %}
+{% block body %}
     <div class="layout">
         <header class="header-connect"><a href="">Oply</a></header>
-
         <main>
             <div class="sign-up__main">
                 <div class="sign-up__headtitle">
-                    <h1 class="title__first">Sign in to Joey</h1>
+                    <h1 class="title__first">Sign up to Joey</h1>
                     <p class="subtitle">Petite catchline des familles</p>
                 </div>
-            
-                <form action="">
+
+                <form action="" method="post">
                     <div class="sign-up__form-body">
                         <div class="field">
                             <label for="" class="label">Email address<i class="tooltip-info icon-tooltip"></i></label>
                             <div class="input__text-icon">
                                 <span class="input__icon"><i class="icon-mail"></i></span>
-                                <input name="mail" type="text" class="input__text" placeholder="johnidoe@oply.com" required>
+                                <input type="text" name="mail" class="input__text" placeholder="johnidoe@oply.com">
                             </div>
                         </div>
                         <div class="field">
                             <label for="" class="label">Password</label>
                             <div class="input__text-icon">
                                 <span class="input__icon"><i class="icon-key"></i></span>
-                                <input type="password" class="input__text" placeholder="johnidoe@oply.com" required>
+                                <input type="password" name="pwd" class="input__text" placeholder="johnidoe@oply.com">
+                            </div>
+                        </div>
+                        <div class="field">
+                            <label for="" class="label">Confirmation of password</label>
+                            <div class="input__text-icon">
+                                <span class="input__icon"><i class="icon-key"></i></span>
+                                <input type="password" name="pwd2" class="input__text" placeholder="johnidoe@oply.com">
                             </div>
                         </div>
                     </div>
-    
+
                     <div class="sign-up__form-footer">
                         <div class="btn__outer">
-                            <button class="btn btn__center">Sign in now</button>
+                            <button value="Sign up" name="sign-up-button" class="btn btn__center">Sign up now</button>
                         </div>
-                        <p class="btn__bottom-msg">Doesn't have an account? <a href="">Sign up here</a></p>
+                        <p class="btn__bottom-msg">Already have an account? <a href="/?a=sign-in">Sign in here</a></p>
                     </div>
                 </form>
             </div>
@@ -49,6 +48,4 @@
             <img src="https://res.cloudinary.com/dj09xr9gd/image/upload/v1528813897/illustrations/illu-connect.png" class="sign-up__bg-connect">
         </main>
     </div>
-    
-</body>
-</html>
+{% endblock %}
