--- a/src/View/sign-in.html.twig
+++ b/src/View/sign-in.html.twig
@@ -1,25 +1,17 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Joey - Connexion</title>
-    <link rel="stylesheet" type="text/css" href="../../../web/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,800" rel="stylesheet">
-</head>
-<body class="sign-up">
+{% extends "./index.html.twig" %}
+{% set classBody = 'sign-up' %}
+{% block title %}Joey - Connexion{% endblock %}
+{% block body %}
     <div class="layout">
         <header class="header-connect"><a href="">Oply</a></header>
-
         <main>
             <div class="sign-up__main">
                 <div class="sign-up__headtitle">
                     <h1 class="title__first">Sign in to Joey</h1>
                     <p class="subtitle">Petite catchline des familles</p>
                 </div>
-            
-                <form action="">
+
+                <form action="" method="post">
                     <div class="sign-up__form-body">
                         <div class="field">
                             <label for="" class="label">Email address<i class="tooltip-info icon-tooltip"></i></label>
@@ -32,16 +24,19 @@
                             <label for="" class="label">Password</label>
                             <div class="input__text-icon">
                                 <span class="input__icon"><i class="icon-key"></i></span>
-                                <input type="password" class="input__text" placeholder="johnidoe@oply.com" required>
+                                <input type="password"  name="pwd" class="input__text" placeholder="johnidoe@oply.com" required>
                             </div>
                         </div>
                     </div>
-    
+                    <div style="text-align: center" class="field--error">
+                        <p class="label">{{ error }}</p>
+                    </div>
+
                     <div class="sign-up__form-footer">
                         <div class="btn__outer">
-                            <button class="btn btn__center">Sign in now</button>
+                            <button value="Se connecter" name="connexion_bouton" class="btn btn__center">Sign in now</button>
                         </div>
-                        <p class="btn__bottom-msg">Doesn't have an account? <a href="">Sign up here</a></p>
+                        <p class="btn__bottom-msg">Doesn't have an account? <a href="/?a=sign-up">Sign up here</a></p>
                     </div>
                 </form>
             </div>
@@ -49,6 +44,4 @@
             <img src="https://res.cloudinary.com/dj09xr9gd/image/upload/v1528813897/illustrations/illu-connect.png" class="sign-up__bg-connect">
         </main>
     </div>
-    
-</body>
-</html>
+{% endblock %}
