--- a/src/View/sales/sign-up.html.twig
+++ b/src/View/sales/sign-up.html.twig
@@ -11,12 +11,16 @@
                     <p class="subtitle">Petite catchline des familles</p>
                 </div>
 
-                <form action="" method="post">
+                <form action="" method="post" class="formData">
                     <div class="sign-up__form-body">
                         <div class="field">
-                            <label for="" class="label">Email address<i class="tooltip-info icon-tooltip"></i></label>
+                            <label for="" class="label">Email address
+                                <i class="tooltip-info icon-tooltip"></i>
+                            </label>
                             <div class="input__text-icon">
-                                <span class="input__icon"><i class="icon-mail"></i></span>
+                                <span class="input__icon">
+                                    <i class="icon-mail"></i>
+                                </span>
                                 <input type="text" name="mail" class="input__text" placeholder="johnidoe@oply.com">
                             </div>
                         </div>
@@ -30,7 +34,9 @@
                         <div class="field">
                             <label for="" class="label">Confirmation of password</label>
                             <div class="input__text-icon">
-                                <span class="input__icon"><i class="icon-key"></i></span>
+                                <span class="input__icon">
+                                    <i class="icon-key"></i>
+                                </span>
                                 <input type="password" name="pwd2" class="input__text" placeholder="johnidoe@oply.com">
                             </div>
                         </div>
@@ -40,7 +46,9 @@
                         <div class="btn__outer">
                             <button value="Sign up" name="sign-up-button" class="btn btn__center">Sign up now</button>
                         </div>
-                        <p class="btn__bottom-msg">Already have an account? <a href="/?a=sign-in">Sign in here</a></p>
+                        <p class="btn__bottom-msg">Already have an account?
+                            <a href="/?a=sign-in">Sign in here</a>
+                        </p>
                     </div>
                 </form>
             </div>
@@ -48,4 +56,7 @@
             <img src="https://res.cloudinary.com/dj09xr9gd/image/upload/v1528813897/illustrations/illu-connect.png" class="sign-up__bg-connect">
         </main>
     </div>
+{% endblock %}
+{% block javascript %}
+    <script src="web/js/actions.js"></script>
 {% endblock %}
