fix placeholders and inputs

--- a/src/View/page/client-list.html
+++ b/src/View/page/client-list.html
@@ -201,41 +201,21 @@
         <div class="field__divider">
           <div class="field">
             <label for="" class="label">Company name</label>
-            <div class="input__text-icon">
-              <span class="input__icon">
-                <i class="icon-mail"></i>
-              </span>
-              <input type="text" class="input__text" placeholder="johnidoe@oply.com">
-            </div>
+            <input type="text" class="input__text" placeholder="Exemple: Oply">
           </div>
         </div>
         <div class="field__divider">
           <div class="field">
             <label for="" class="label">Company address</label>
-            <div class="input__text-icon">
-              <span class="input__icon">
-                <i class="icon-mail"></i>
-              </span>
-              <input type="text" class="input__text" placeholder="johnidoe@oply.com">
-            </div>
+            <input type="text" class="input__text" placeholder="Exemple: 10 Carnaby St.">
           </div>
           <div class="field">
             <label for="" class="label">Company zipcode</label>
-            <div class="input__text-icon">
-              <span class="input__icon">
-                <i class="icon-mail"></i>
-              </span>
-              <input type="text" class="input__text" placeholder="johnidoe@oply.com">
-            </div>
+            <input type="text" class="input__text" placeholder="Exemple: 95020">
           </div>
           <div class="field">
             <label for="" class="label">Company city</label>
-            <div class="input__text-icon">
-              <span class="input__icon">
-                <i class="icon-mail"></i>
-              </span>
-              <input type="text" class="input__text" placeholder="johnidoe@oply.com">
-            </div>
+            <input type="text" class="input__text" placeholder="Exemple: London">
           </div>
         </div>
       </div>
