Fix cancel action on create user modal

--- a/src/View/page/client-list.html
+++ b/src/View/page/client-list.html
@@ -195,7 +195,7 @@
         </div>
       </div>
       <!-- step 2 -->
-      <div class="create-client__modal-step create-client__modal-contain with-divider step">
+      <div class="create-client__modal-step with-divider step">
         <div class="field__divider">
           <div class="field">
             <label for="" class="label">Company name</label>
