Use select script & reset step

--- a/src/View/page/client-list.html
+++ b/src/View/page/client-list.html
@@ -150,24 +150,24 @@
       <div class="create-client__modal-step step">
         <div class="field">
           <label for="" class="label">Civility</label>
-            <div class="custom-select-wrapper">
-                <select name="sources" id="sources" class="custom-select sources" placeholder="SELECTOR" style="display: none;">
-                    <option value="profile">Mr.</option>
-                    <option value="profile">Mrs.</option>
-                    <option value="word">Miss</option>
-                </select>
-                <div class="custom-select sources">
-                    <span class="custom-select-trigger">
-                        <span>Civility</span>
-                        <i class="icon-select"></i>
-                    </span>
-                    <div class="custom-options">
-                        <span class="custom-option" data-value="profile">Mr.</span>
-                        <span class="custom-option" data-value="profile">Mrs.</span>
-                        <span class="custom-option" data-value="word">Miss</span>
-                    </div>
-                </div>
+          <div class="custom-select-wrapper">
+            <select name="sources" id="sources" class="custom-select sources" placeholder="SELECTOR" style="display: none;">
+              <option value="profile">Mr.</option>
+              <option value="profile">Mrs.</option>
+              <option value="word">Miss</option>
+            </select>
+            <div class="custom-select sources">
+              <span class="custom-select-trigger">
+                <span>Civility</span>
+                <i class="icon-select"></i>
+              </span>
+              <div class="custom-options">
+                <span class="custom-option" data-value="profile">Mr.</span>
+                <span class="custom-option" data-value="profile">Mrs.</span>
+                <span class="custom-option" data-value="word">Miss</span>
+              </div>
             </div>
+          </div>
         </div>
         <div class="field">
           <label for="" class="label">First name</label>
@@ -245,5 +245,6 @@
 
 </body>
 <script src="../../../web/js/client.js"></script>
+<script src="../../../web/js/select.js"></script>
 
 </html>
