add header to do: fair le linkage entre le back et le front.

--- a/src/View/sign-in.html.twig
+++ b/src/View/sign-in.html.twig
@@ -3,7 +3,9 @@
 {% block title %}Joey - Connexion{% endblock %}
 {% block body %}
     <div class="layout">
-        <header class="header-connect"><a href="">Oply</a></header>
+        <header class="header-connect">
+            <a href="">Oply</a>
+        </header>
         <main>
             <div class="sign-up__main">
                 <div class="sign-up__headtitle">
